update for Melanka

--- a/index.html
+++ b/index.html
@@ -10,47 +10,57 @@
     <div class="div4ik">
       <p class="sub">
         Hallo, ich bin Melana. Ich komme aus der Ukraine Aber wegen dem Krieg
-        lebe ich schon 1,5 in der Schweiz. Wo ist es besser? Es ist ganz schwierig zu sagen.
-        Hier ist mein Haus in der Schweiz. Ich wohne auf dem dritten Stock. Das Haus
-        in der Ukraine ist auch 4- Stöckig. Ich wohne im zweiten Etage. Die
-        Ausbildung In der Ukraine bin ich in der zehnten Klasse. Total sind es 11
-        Schuljahre. Man kann auch nach der neunten Klasse in die Berufsschule oder
-        in das gymnasium gehen. Nach dem elften Schuljahr kann man in die
-        Universität oder ins Kollege gehen. Die Schulaus Bildung in der Ukraine
-        ist kostenlos. Universität und Kollege kosten ca.500Fr pro Semester. Die
-        Infrastruktur Z. B. die Strassen in der Schweiz haben Top qualität, weil
-        die immer repariert werden. In der Ukraine haben wir Probleme mit den
-        Strassen, aber wir nehmen das Beispiel von Europa und reparieren den
-        Strasse belabg Die Mode In der Schweiz gibt es viel bekante
-        Kleidermarken in der Ukraine auch. In beiden Länder gibt es auch eigene
-        Designer. Das Klima Das Klima in der Schweiz spielt ganz verrückt
-        gestern musstest du eine Winterjacke tragen, heute bist du im T-Shirt,
-        morgen brauchst du wieder einen Regenschutz. Und so ist ganzes Jahr! In
-        der Ukraine ist es kalt und windig im Winter ca. 0-5 und sehr heiss im
-        Sommer bis +40 Natur Die Natur in der Ukraine und in der Schweiz ist
-        sehr schön: das Meer, die Bergen, die Steppen in der Ukraine; und
-        wunderschöne Seen und fantastischen Aepen in der Schweiz. Naturschutz Da
-        ist die Schweiz ein Vorbild. Leider haben wir in der Ukraine Probleme
-        mit Naturverschmutzung aber wir geben uns alle Mühen in das zu
-        verbessern. Preise und Löhne Z.b in der Ukraine braucht man ca. 200
-        Franken in Monat für das Essen und Trinken kaufen. In der Schweiz
-        braucht man ca. 600 Franken. Die Lebensmittel in der Ukraine sind
-        billeger als in der Schweiz. Aber minimaler Monatslohn ist auch viel
-        kleiner: ca400 Fr in der Ukraine und 3,600 Fr in der Schweiz Essen Das
-        traditionelle Gericht in der Schweiz ist Fondue es ist sehr populär in
-        den Restaurants oder zuhause in der Ukraine kochen wir Borsch, das ist
-        eine Gemüse- Fleisch Suppe Für das Borsch brauchen wir 
-        <span style="display: block; width: 57%;">
-        Kartoffeln,
-        Karotten, 
-        Zwiebeln, 
-        Randen, 
-        Kohl,
-        Tomaten. 
+        lebe ich schon 1,5 in der Schweiz. Wo ist es besser? Es ist ganz
+        schwierig zu sagen. Hier ist mein Haus in der Schweiz. Ich wohne auf dem
+        dritten Stock. Das Haus in der Ukraine ist auch 4- Stöckig. Ich wohne im
+        zweiten Etage. Die Ausbildung In der Ukraine bin ich in der zehnten
+        Klasse. Total sind es 11 Schuljahre. Man kann auch nach der neunten
+        Klasse in die Berufsschule oder in das gymnasium gehen. Nach dem elften
+        Schuljahr kann man in die Universität oder ins Kollege gehen. Die
+        Schulaus Bildung in der Ukraine ist kostenlos. Universität und Kollege
+        kosten ca.500Fr pro Semester. Die Infrastruktur Z. B. die Strassen in
+        der Schweiz haben Top qualität, weil die immer repariert werden. In der
+        Ukraine haben wir Probleme mit den Strassen, aber wir nehmen das
+        Beispiel von Europa und reparieren den Strasse belabg Die Mode In der
+        Schweiz gibt es viel bekante Kleidermarken in der Ukraine auch. In
+        beiden Länder gibt es auch eigene Designer. Die Mode in der Schweiz und
+        in der Ukraine ist sehr ähnlich. Die junge Leute tragen gerne sportliche
+        kleider, bei den älteren Damen und Herren klassische Mode ist mehr
+        populär. Etwas haben wir in der Ukraine ganz speziel im Winter tragen
+        die Frauen gerne Pelzen, und im Sommer Schuhe mit hohen Alzätzen. Das
+        Klima Das Klima in der Schweiz spielt ganz verrückt gestern musstest du
+        eine Winterjacke tragen, heute bist du im T-Shirt, morgen brauchst du
+        wieder einen Regenschutz. Und so ist ganzes Jahr! In der Ukraine ist es
+        kalt und windig im Winter ca. 0-5 und sehr heiss im Sommer bis +40 Natur
+        Die Natur in der Ukraine und in der Schweiz ist sehr schön: das Meer,
+        die Bergen, die Steppen in der Ukraine; und wunderschöne Seen und
+        fantastischen Aepen in der Schweiz. Unsere Berge heissen Karpaty, übrigens 
+        kann man auch da gut Ski fahren. Das gebierge ist über zweieinhalb Tausend 
+        Meter hoch, dort gibt es sehr spannende Ski-Pisten. Vor dem krieg fuhren die 
+        Menschen im Sommer gerne nach krim. Die wunderschöne Aussicht mit Bergen, Meer 
+        und Palmen ist gleich schön wie zum Beispiel im Tessin. 
+        Sprache gleich wie in der viersprächigen 
+        Schweiz, sprechen die Leute in der Ukraine auch mehrere Sprachen: polnisch
+        bulgarisch, romänisch, russisch, hungarisch, idisch und so weiter. Am meisten
+        spricht man aber ukrainisch. Die ukrainische Sprache ist slavisch und hat Auch
+        kirillisches Alphabet. Kultur: Kultur, Musik und Tanz verbindet die Menschen
+        aus der ganzen Welt. Hopak-Tanz in der Ukraine, so wie das iodeln in der 
+        Schweiz ist sehr traditionell in beiden Länder. Naturschutz Da ist die Schweiz ein
+        Vorbild. Leider haben wir in der Ukraine Probleme mit Naturverschmutzung
+        aber wir geben uns alle Mühen in das zu verbessern. Preise und Löhne Z.b
+        in der Ukraine braucht man ca. 200 Franken in Monat für das Essen und
+        Trinken kaufen. In der Schweiz braucht man ca. 600 Franken. Die
+        Lebensmittel in der Ukraine sind billeger als in der Schweiz. Aber
+        minimaler Monatslohn ist auch viel kleiner: ca400 Fr in der Ukraine und
+        3,600 Fr in der Schweiz Essen Das traditionelle Gericht in der Schweiz
+        ist Fondue es ist sehr populär in den Restaurants oder zuhause in der
+        Ukraine kochen wir Borsch, das ist eine Gemüse- Fleisch Suppe Für das
+        Borsch brauchen wir
+        <span style="display: block; width: 57%">
+          Kartoffeln, Karotten, Zwiebeln, Randen, Kohl, Tomaten.
         </span>
-        Auch brauchen wir Suppenfleisch dazu.
-        Für Fondue brauchen wir verschiedene Käsesorten oder eine
-        Fonduemischung.
+        Auch brauchen wir Suppenfleisch dazu. Für Fondue brauchen wir
+        verschiedene Käsesorten oder eine Fonduemischung.
       </p>
     </div>
   </body>
